@@ -1,0 +1,12 @@
+name: CI
+
+on:
+  push:
+    branches: [ development ]
+  workflow_dispatch:
+
+jobs:
+  test:
+    uses: PerlToolsTeam/github_workflows/.github/workflows/cpan-test.yml@main
+    with:
+      testing_context: '[ "release" ]'
